fixed navbar spacing issues on small screens

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -60,7 +60,7 @@ body {
 }
 .wrapper {
   width: 100%;
-  padding: 0 24px;
+  padding: 0 5vw;
   margin: 0 auto;
 }
 @media (min-width: 959.98px) {
@@ -274,7 +274,8 @@ body {
   cursor: pointer;
   padding: 15px;
   height: 50px;
-  min-width: 175px;
+  width: 175px;
+  max-width: 40vw;
 }
 .search {
   display: flex;
@@ -327,7 +328,7 @@ input[type="text"].searchInput::-webkit-input-placeholder {
 }
 #sidebarOpen,
 #sidebarClose {
-  margin-left: 22px;
+  margin-left: 4vw;
   height: 20px;
   width: 20px;
   user-select: none;
